# NexLink

./: .env.example  .gitignore  Cargo.toml  README.md  deploy.sh
copy-bidirectional/benches/: copy_benchmark.rs
copy-bidirectional/src/: copy.rs  copy_bidirectional.rs  lib.rs
copy-bidirectional/tests/: copy_bidirectional_test.rs
crates/copy-bidirectional/: Cargo.toml
crates/copy-bidirectional/benches/: copy_benchmark.rs
crates/copy-bidirectional/src/: copy.rs
crates/copy-bidirectional/tests/: copy_bidirectional_test.rs
crates/nexlink-core/: Cargo.toml
crates/nexlink-core/src/: bot.rs  capability.rs  channel.rs  event.rs  invoke.rs  lib.rs  message.rs  peer.rs  policy.rs  session.rs
crates/nexlink-core/src/traits/: capability.rs  connector.rs  mod.rs  repository.rs  runtime.rs  transport.rs
crates/nexlink-lib/: Cargo.toml
crates/nexlink-lib/src/: connector_adapter.rs  connector_envelope.rs  connector_examples.rs  lib.rs  message_model.rs  network_id.rs  node_score.rs  peer_model.rs  platform_connector.rs  platform_factory.rs  platform_message.rs  sys_proxy.rs  traffic.rs
crates/nexlink-lib/src/cache/: mod.rs
crates/nexlink-lib/src/config/: mod.rs
crates/nexlink-lib/src/identity/: mod.rs
crates/nexlink-lib/src/network/: swarm.rs
crates/nexlink-lib/src/pac/: mod.rs
crates/nexlink-lib/src/proxy/: credentials.rs  http_connect.rs  mod.rs  provider_handler.rs  socks5.rs  unified_proxy.rs
crates/nexlink-postgresql/: Cargo.toml
crates/nexlink-postgresql/.sql_reverse/: default_postgres.json  postgres.sh  reverse.yml
crates/nexlink-postgresql/.sql_reverse/templates/: postgres.tera  postgres.terapostgres.tera
crates/nexlink-postgresql/migrations/: 001_create_peer_user.sql  002_create_sync_checkpoint.sql
crates/nexlink-postgresql/src/: lib.rs
crates/nexlink-postgresql/src/nexlink/: mod.rs  peer_user.rs  sync_checkpoint.rs
crates/nexlink-taos/: Cargo.toml
crates/nexlink-taos/src/: client.rs  config.rs  lib.rs  traffic.rs
crates/nexlink-traffic/: Cargo.toml
crates/nexlink-traffic-sync/: Cargo.toml
crates/nexlink-traffic-sync/src/: main.rs
crates/nexlink-traffic/src/: lib.rs
docs/plans/: 2026-02-24-p1-scaffold.md  2026-02-24-p2-proxy-core.md  2026-02-24-p2p-proxy-design.md  2026-02-24-p3-network-resilience.md  2026-02-24-p4-tauri-gui.md  2026-02-24-p5-network-isolation.md  2026-02-24-p6-traffic-loadbalance.md  2026-02-24-p7-system-proxy.md
nexlink-app/: Cargo.toml  Trunk.toml  UNIFIED_PROXY_IMPLEMENTATION_SUMMARY.md  index.html  package-lock.json  package.json  tailwind.css
nexlink-app/src/: api.rs  app.rs  main.rs  types.rs
nexlink-app/src-tauri/: Cargo.toml  tauri.conf.json
nexlink-app/src-tauri/capabilities/: default.json
nexlink-app/src-tauri/src/: commands.rs  lib.rs  main.rs  state.rs  swarm_task.rs
nexlink-app/src/components/: layout.rs  mod.rs  sidebar.rs  status_bar.rs
nexlink-app/src/pages/: mod.rs  nodes.rs  proxy.rs  settings.rs  traffic.rs
nexlink-app/styles/: output.css
nexlink-lib/: Cargo.toml  PHASE_2_AUTONOMOUS_NETWORK_IMPLEMENTATION.md
nexlink-lib/src/: ai_agent.rs  lib.rs  network_id.rs  node_score.rs  peer_traffic.rs  sys_proxy.rs  traffic.rs
nexlink-lib/src/ai_proxy/: cache.rs  coordinator.rs  mod.rs  server.rs
nexlink-lib/src/config/: mod.rs
nexlink-lib/src/identity/: mod.rs
nexlink-lib/src/network/: autonomous.rs  autonomous_tests.rs  behaviour.rs  example_autonomous_usage.rs  integrated_autonomous.rs  integrated_security.rs  mod.rs  security.rs  swarm.rs
nexlink-lib/src/proxy/: http_connect.rs  mod.rs  provider_handler.rs  socks5.rs  unified_proxy.rs
nexlink-lib/src/security/: crypto.rs  mod.rs  privacy.rs
nexlink-lib/tests/: unified_proxy_test.rs
nexlink-node/: Cargo.toml
nexlink-node/src/: main.rs
nexlink-proxy/: Cargo.toml
nexlink-proxy/src/: main.rs
nexlink-relay/: Cargo.toml
nexlink-relay/src/: main.rs
nexlink-traffic/: Cargo.toml
nexlink-traffic-sync/: Cargo.toml
nexlink-traffic-sync/src/: main.rs
nexlink-traffic/src/: lib.rs
test-data/: identity.json
test_data_dir/: identity.json
