[package]
name = "nexlink-app"
version = "0.1.0"
edition = "2024"

# 仅前端所需的依赖
[dependencies]
tracing = { version = "0.1.44" }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
md5 = "0.8"
rand = { version = "0.9.1" }
chrono = { version = "0.4", features = ["serde"] }

# Frontend dependencies
leptos = { version = "0.8", features = ["tracing", "csr"] }
leptos_meta = { version = "0.8" }
leptos_router = { version = "0.8" }
gloo-timers = { version = "0.3", features = ["futures"] }
console_log = "1.0"
log = "0.4"
console_error_panic_hook = { version = "0.1" }

# Wasm bindings
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6"
web-sys = { version = "0.3", features = ["Navigator", "Clipboard", "Window"] }
js-sys = "0.3"
wasm-bindgen-futures = "0.4"

# 仅桌面后端所需的依赖
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
nexlink-lib = { path = "../nexlink-lib" }
tokio = { version = "1", features = ["full"] }
tracing-subscriber = { version = "0.3.22" }
anyhow = { version = "1" }
axum = "0.8"
tower = { version = "0.5.3", features = ["util"] }

# 确保 WASM 下 getrandom 各版本使用 js 后端
[dependencies.getrandom]
version = "0.2"
features = ["js"]

[dependencies.getrandom03]
package = "getrandom"
version = "0.3"
features = ["wasm_js"]