[package]
name = "nexlink-lib"
version = "0.1.0"
edition = "2024"

[dependencies]
libp2p = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
dirs = { workspace = true }
libp2p-stream = { workspace = true }
tokio-util = { workspace = true }
fast-socks5 = { workspace = true }
hkdf = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
parking_lot = "0.12"
axum = "0.7"
md5 = "0.7"
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
tower = { version = "0.4", features = ["util"] }
getrandom = { version = "0.2", features = ["js"] }

[dev-dependencies]
tempfile = "3"
