[package]
name = "nexlink-lib"
version = "0.1.0"
edition = "2021"

[dependencies]
libp2p = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
dirs = { workspace = true }
libp2p-stream = { workspace = true }
tokio-util = { workspace = true }
fast-socks5 = { workspace = true }
hkdf = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
base64 = { workspace = true }

[dev-dependencies]
tempfile = "3"
