[package]
name = "nexlink-node"
version = "0.1.0"
edition = "2021"

[dependencies]
nexlink-lib = { path = "../crates/nexlink-lib" }
nexlink-traffic = { path = "../crates/nexlink-traffic" }
libp2p = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
libp2p-stream = { workspace = true }
serde_json = { workspace = true }
dashmap = { workspace = true }
time = { workspace = true }
nexlink-taos = { path = "../crates/nexlink-taos" }
