[package]
name = "nexlink-relay"
version = "0.1.0"
edition = "2021"

[dependencies]
nexlink-lib.workspace = true
libp2p = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
serde_json = { workspace = true }
nexlink-postgresql = { path = "../crates/nexlink-postgresql" }
