[package]
name = "nexlink-traffic-sync"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
clap = { workspace = true, features = ["derive"] }
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
nexlink-core = { path = "../crates/nexlink-core" }
nexlink-taos = { path = "../crates/nexlink-taos" }
nexlink-postgresql = { path = "../crates/nexlink-postgresql" }
taos = { version = "0.12.3", default-features = true }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
futures-util = "0.3"
