[package]
name = "nexlink-app"
version = "0.1.0"
edition = "2024"

[lib]
name = "nexlink_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
nexlink-lib = { path = "../../nexlink-lib" }
libp2p = { version = "0.56", features = ["quic", "noise", "yamux", "rendezvous", "relay", "autonat", "identify", "ping", "ed25519", "macros", "tokio", "tcp"] }
libp2p-stream = "0.4.0-alpha"
